Coorection bug StandardCharsets.UTF_8